fix: horizonatal scroll, UI fixes and toggle dark mode state

--- a/quran-for-you/src/components/Layout/Desktopview/Verse/styles.css
+++ b/quran-for-you/src/components/Layout/Desktopview/Verse/styles.css
@@ -1,74 +1,101 @@
 .filter-label {
-    font-size: 0.85vw;
-    font-weight: 900;
-    margin-bottom: 2px;
+  font-size: 0.85vw;
+  font-weight: 900;
+  margin-bottom: 2px;
 }
 
 .fixed {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    border: 1px slid black;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  border: 1px slid black;
 }
 
 .filter-container {
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
-    height: 4vw;
-    align-items: center;
-    justify-content: space-evenly;
-    border-radius: 1vw;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  height: 4vw;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 1vw;
 }
 
-.filter-container>select {
-    text-align: center;
-    font-size: 1vw;
-    font-weight: 900;
-    padding-left: 0;
-    padding-right: 0;
-    height: 100%;
-    border-radius: 1vw;
+.filter-container > select {
+  text-align: center;
+  font-size: 1vw;
+  font-weight: 900;
+  padding-left: 0;
+  padding-right: 0;
+  height: 100%;
+  border-radius: 1vw;
 }
 
 .filter-value {
-    font-size: 1.15vw;
-    font-weight: 600;
-    text-align: center;
+  font-size: 1.15vw;
+  font-weight: 600;
+  text-align: center;
 }
 
 .icons-sbd {
-    object-fit: contain;
-    width: 1vw;
-    height: 1vw;
-    margin-left: 0.5vw;
+  object-fit: contain;
+  width: 1vw;
+  height: 1vw;
+  margin-left: 0.5vw;
 }
 
 .sbd-container {
-    justify-content: center;
-    margin-left: 0.75vw;
-    margin-right: 0.75vw;
-    align-items: center;
+  justify-content: center;
+  margin-left: 0.75vw;
+  margin-right: 0.75vw;
+  align-items: center;
 }
 
 .custom-select {
-    display: flex;
-    outline: none;
-    padding: 0;
-    margin: 0;
-    border-color: #fff;
+  display: flex;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  border-color: #fff;
 }
 
 .reading-select {
-    display: flex;
-    outline: none;
-    padding: 0;
-    margin: 0;
-    border-color: #fff;
+  display: flex;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  border-color: #fff;
 }
 
 .custom-select .css-1oh9bp8 {
-    display: none;
+  display: none;
 }
 
 .box-dark {
-    box-shadow: rgba(241, 242, 243, 0.35) 0px 1px 2px 0px, rgba(243, 245, 247, 0.2) 0px 2px 6px 2px;
+  box-shadow: rgba(241, 242, 243, 0.35) 0px 1px 2px 0px,
+    rgba(243, 245, 247, 0.2) 0px 2px 6px 2px;
+}
+
+@media (min-width: 640px) {
+  .tiles {
+    width: calc((100% - (24px)) / 2);
+    margin-right: 24px;
+  }
+}
+
+@media (min-width: 768px) {
+  .tiles {
+    width: calc((100% - (4 * 14px)) / 3);
+  }
+}
+
+@media (min-width: 1024px) {
+  .tiles {
+    width: calc((100% - (4 * 14px)) / 3);
+  }
+}
+
+@media (min-width: 1280px) {
+  .tiles {
+    width: calc((100% - (4 * 14px)) / 3);
+  }
 }
